envoy.yaml
stats_config:
  stats_tags:
    - tag_name: phase
      regex: "(_phase=([a-z_]+))"
    - tag_name: rule_id
      regex: "(_ruleid=([0-9]+))"
    - tag_name: identifier
      regex: "(_identifier=([0-9a-z.:]+))"
    - tag_name: owner
      regex: "(_owner=([0-9a-z.:]+))"
    - tag_name: authority
      regex: "(_authority=([0-9a-z.:]+))"

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 5199
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http2_protocol_options: {}
                route_config:
                  response_headers_to_add:
                    - header:
                        key: "X-XSS-Protection"
                        value: "1;mode=block"
                    - header:
                        key: "X-Frame-Options"
                        value: "SAMEORIGIN"
                    - header:
                        key: "x-content-type-options"
                        value: "nosniff"
                    - header:
                        key: "Cache-Control"
                        value: "no-cache, no-store, must-revalidate, no-transform"
                    - header:
                        key: "X-Download-Options"
                        value: "noopen"
                    - header:
                        key: "referrer-policy"
                        value: "no-referrer-when-downgrade"
                    - header:
                        key: "Strict-Transport-Security"
                        value: "max-age=31536000; includeSubDomains"
                    - header:
                        key: "Content-Security-Policy"
                        value: "*.islamyakin.tech"
                  virtual_hosts:
                    - name: semesta_route
                      domains:
                        - "me.islamyakin.tech"
                      routes:
                        - match:
                            prefix: "/tests"
                          route:
                            cluster: cluster[2]
                        - match:
                            prefix: "/participant-questions"
                          route:
                            cluster: cluster[1]
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster[0]
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "coraza-filter"
                        root_id: ""
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {
                              "directives_map": {
                                  "rs1": [
                                    "SecRuleEngine On",
                                    "Include @demo-conf",
                                    "Include @crs-setup-conf",
                                    "SecDefaultAction \"phase:3,log,auditlog,pass\"",
                                    "SecDefaultAction \"phase:4,log,auditlog,pass\"",
                                    "SecDefaultAction \"phase:5,log,auditlog,pass\"",
                                    "SecDebugLogLevel 3",
                                    "Include @owasp_crs/*.conf",
                                    "SecRule REQUEST_URI \"@streq /.env\" \"id:101,phase:1,t:lowercase,deny\" \nSecRule REQUEST_BODY \"@rx maliciouspayload\" \"id:102,phase:2,t:lowercase,deny\" \nSecRule RESPONSE_HEADERS::status \"@rx 406\" \"id:103,phase:3,t:lowercase,deny\" \nSecRule RESPONSE_BODY \"@contains responsebodycode\" \"id:104,phase:4,t:lowercase,deny\""
                                  ]
                              },
                              "default_directives": "rs1",
                              "metric_labels": {
                                "owner": "coraza",
                                "identifier": "global"
                              }
                            }
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "notification"
                          code:
                            local:
                              filename: "/etc/envoy/waf/main.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
    - name: cluster[2]
      connect_timeout: 6000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster[2]
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: .svc.cluster.local
                      port_value: 80
    - name: cluster[1]
      connect_timeout: 6000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster[1]
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: .svc.cluster.local
                      port_value: 80
    - name: cluster[0]
      connect_timeout: 6000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster[0]
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: .svc.cluster.local
                      port_value: 80
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
